template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "bastionName": {
            "type": "string",
            "minLength": 1,
            "defaultValue": "nurihostvm",
            "metadata": {
                "description": "Virtual Machine Name."
            }
        },
        "adminUsername": {
            "type": "string",
            "minLength": 1,
            "defaultValue": "demouser",
            "metadata": {
                "description": "Username for the Virtual Machine."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "defaultValue": "demo!pass123",
            "metadata": {
                "description": "Password for the Virtual Machine."
            }
        },
        "publicIpName": {
            "type": "string",
            "minLength": 1,
            "defaultValue": "nuripublicip",
            "metadata": {
                "description": "Virtual Machine Public IP Name."
            }
        },
        "vnetName": {
            "type": "string",
            "defaultValue": "nuriarcVNet",
            "metadata": {
              "description": "VNet name"
            }
        },
          "vnetAddressPrefix": {
            "type": "string",
            "defaultValue": "10.0.0.0/16",
            "metadata": {
              "description": "Address prefix"
            }
        },
          "subnetPrefix": {
            "type": "string",
            "defaultValue": "10.0.0.0/24",
            "metadata": {
              "description": "Subnet 1 Prefix"
            }
        },
          "subnetName": {
            "type": "string",
            "defaultValue": "nuriarcSubnet",
            "metadata": {
              "description": "Subnet Name"
            }
        },
        "nicName": {
            "type": "string",
            "defaultValue": "nurinic",
            "metadata": {
              "description": "Subnet Name"
            }
        },
        "nsgName": {
            "type": "string",
            "minLength": 1,
            "defaultValue": "nuriarcnsg",
            "metadata": {
                "description": "Virtual Machine NSG Name."
            }
        },
        "dmsVnet": {
            "type": "string",
            "defaultValue": "nuridmsVNet",
            "metadata": {
              "description": "DMS VNet name"
            }
        },
          "dmsAddressPrefix": {
            "type": "string",
            "defaultValue": "10.1.0.0/16",
            "metadata": {
              "description": "Address prefix"
            }
        },
          "dmssubnetPrefix": {
            "type": "string",
            "defaultValue": "10.1.0.0/24",
            "metadata": {
              "description": "Subnet 1 Prefix"
            }
        },
          "dmssubnetName": {
            "type": "string",
            "defaultValue": "nuriDMS",
            "metadata": {
              "description": "Subnet Name"
            }
        }
    },
    "variables": {
        "smarthotelhostVMname": "[parameters('bastionName')]",
        "smarthotelhostNICname": "[parameters('nicName')]",
        "smarthotelhostOSdisk": "[concat(variables('smarthotelhostVMname'),'_OsDisk')]",
        "smarthotelhostDataDisk": "[concat(variables('smarthotelhostVMname'),'_DataDisk')]",
        "publicIPAddressName": "[parameters('publicIpName')]",
        "smarthotelVnetName": "[parameters('vnetName')]",
        "smarthotelPrefix": "[parameters('vnetAddressPrefix')]",
        "smarthotelSubnetPrefix": "[parameters('subnetPrefix')]",
        "smarthotelSubnetName": "[parameters('subnetName')]",
        "smarthotelhostNSGName": "[parameters('nsgName')]",
        "dmsVnetName": "[parameters('dmsVnet')]",
        "dmsPrefix": "[parameters('dmsAddressPrefix')]",
        "dmsSubnetPrefix": "[parameters('dmssubnetPrefix')]",
        "dmsSubnetName": "[parameters('dmssubnetName')]",
        "customScriptFolder": "./sept-2020/",
        "customScriptUriScriptFileName": "BootstrapSmartHotelHost.ps1",
        "customScriptUri": "https://cloudworkshop.blob.core.windows.net/line-of-business-application-migration/sept-2020/BootstrapSmartHotelHost.ps1"
    },
    "resources": [
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('smarthotelhostVMname')]",
            "apiVersion": "2018-06-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D8s_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2019-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[variables('smarthotelhostOSdisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "[variables('smarthotelhostDataDisk')]",
                            "createOption": "Attach",
                            "caching": "None",
                            "managedDisk": {
                                "id": "[resourceId('Microsoft.Compute/disks/', variables('smarthotelhostDataDisk'))]"
                            }
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[variables('smarthotelhostVMname')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('smarthotelhostNICname'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[variables('smarthotelhostNICname')]",
                "[variables('smarthotelhostDataDisk')]"
            ],
            "resources": [
                {
                    "name": "CustomSciptExtension",
                    "type": "extensions",
                    "apiVersion": "2016-03-30",
                    "location": "[resourceGroup().location]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines', variables('smarthotelhostVMname'))]"
                    ],
                    "tags": {
                        "displayName": "ConfigureHost"
                    },
                    "properties": {
                        "publisher": "Microsoft.Compute",
                        "type": "CustomScriptExtension",
                        "typeHandlerVersion": "1.4",
                        "autoUpgradeMinorVersion": false,
                        "settings": {
                            "fileUris": [
                                "[variables('customScriptUri')]"
                            ],
                            "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File ', variables('customScriptFolder'), '/', variables('customScriptUriScriptFileName'))]"
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Compute/disks",
            "name": "[variables('smarthotelhostDataDisk')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Premium_LRS"
            },
            "properties": {
                "creationData": {
                    "createOption": "Empty"
                },
                "diskSizeGB": 256
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('smarthotelhostNICname')]",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('smarthotelVnetName'), variables('smarthotelSubnetname'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "enableAcceleratedNetworking": true,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('smarthotelhostNSGName'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', variables('smarthotelhostVMname'))]"
                }
            },
            "dependsOn": [
                "[variables('publicIPAddressName')]",
                "[variables('smarthotelhostNSGName')]",
                "[variables('smarthotelVnetName')]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('smarthotelhostNSGName')]",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "securityRules": [
                    {
                        "name": "RemoteDesktop",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 310,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[variables('publicIPAddressName')]",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[toLower(concat(variables('smarthotelhostVMname'), '-', substring(uniqueString(resourceGroup().id),0,4)))]"
                },
                "ipTags": []
            }
        },
        {
            "apiVersion": "2016-03-30",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('smarthotelVnetName')]",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('smarthotelPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('smarthotelSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('smarthotelSubnetPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2016-03-30",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('dmsVnetName')]",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('dmsPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('dmsSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('dmsSubnetPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2016-06-01",
            "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
            "name": "[concat(variables('smarthotelVnetName'),'/host2dms')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "allowVirtualNetworkAccess": true,
                "allowForwardedTraffic": false,
                "allowGatewayTransit": false,
                "useRemoteGateways": false,
                "remoteVirtualNetwork": {
                    "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('dmsVnetName'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('smarthotelVnetName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('dmsVnetName'))]"
            ]
        },
        {
            "apiVersion": "2016-06-01",
            "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
            "name": "[concat(variables('dmsVnetName'),'/dms2host')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "allowVirtualNetworkAccess": true,
                "allowForwardedTraffic": false,
                "allowGatewayTransit": false,
                "useRemoteGateways": false,
                "remoteVirtualNetwork": {
                    "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('smarthotelVnetName'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('smarthotelVnetName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('dmsVnetName'))]"
            ]
        }
    ]
}
